--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 */logs/!index.html
 *.htaccess
 *.bak
-*cache/images/!index.html
+*cache/*
 application/tmp/*
 application/config/database.php
 application/config/config.php
