--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 
-user  www;
+user  nginx;
 worker_processes  3;
 
 worker_cpu_affinity 001 010 100;
@@ -66,8 +66,8 @@ http {
         listen       80;
         server_name  bbs.59iav.ru;
         index index.html index.htm index.php;
-        root html/59iavbbs;
-        #charset koi8-r;
+        root /var/www/html/59iavbbs;
+        charset utf-8;
         keepalive_timeout  300;
 
         #access_log  logs/host.access.log  main;
@@ -98,8 +98,8 @@ http {
         listen       80;
         server_name  tvs.hacktea8.com;
         index index.html index.htm index.php;
-        root html/tvideos;
-        #charset koi8-r;
+        root /var/www/html/tvideos;
+        charset utf-8;
         keepalive_timeout  300;
 
         #access_log  logs/host.access.log  main;
@@ -137,8 +137,8 @@ http {
         listen       80;
         server_name  pmadm.hacktea8.com;
         index index.html index.htm index.php;
-        root html/phpmyadmin;
-        #charset koi8-r;
+        root /var/www/html/phpmyadmin;
+        charset utf-8;
         keepalive_timeout  0;
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -166,8 +166,8 @@ http {
         listen       80;
         server_name  mh.emubt.com;
         index index.html index.htm index.php;
-        root html/comics;
-        #charset koi8-r;
+        root /var/www/html/comics;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -201,8 +201,8 @@ http {
         listen       80;
         server_name  51pay.hacktea8.com;
         index index.html index.htm index.php;
-        root html/51pay;
-        #charset koi8-r;
+        root /var/www/html/51pay;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -236,8 +236,8 @@ http {
         listen       80;
         server_name  tool.hacktea8.com;
         index index.html index.htm index.php;
-        root html/webtools;
-        #charset koi8-r;
+        root /var/www/html/webtools;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -271,8 +271,8 @@ http {
         listen       80;
         server_name  vv.hacktea8.com;
         index index.html index.htm index.php;
-        root html/videostv;
-        #charset koi8-r;
+        root /var/www/html/videostv;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /index.html;
@@ -304,43 +304,33 @@ http {
     
     server {
         listen       80;
-        server_name  www.qvdhd.com *.qvdhd.com;
-        index index.html index.htm index.php;
-        root html/qvodp2p;
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        server_name  buzhd.qvdhd.com;
+        root /var/www/html/buzhd;
         #include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|[a-zA-Z0-9-_\.]+\.txt|public)(.+)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        location ~ /\.ht {
-            deny  all;
-        }
+        include codei.conf;
+    }
+   
+    server {
+        listen       80;
+	server_name  dz.qvdhd.com;
+        root /var/www/html/dzstudent;
+        #include expire_static.conf;
+        include dzci.conf;
+    }
+
+    server {
+        listen       80;
+        server_name  www.qvdhd.com *.qvdhd.com;
+        root /var/www/html/qvodp2p;
+        include expire_static.conf;
+        include codei.conf;
     }
 
     server {
         listen       80;
         server_name  jok.hacktea8.com;
         index index.html index.htm index.php;
-        root html/joker;
+        root /var/www/html/joker;
         location / {
           rewrite  ^(.*)    http://jok.emubt.com$1 permanent;
         }
@@ -349,8 +339,8 @@ http {
         listen       80;
         server_name  jok.emubt.com;
         index index.html index.htm index.php;
-        root html/joker;
-        #charset koi8-r;
+        root /var/www/html/joker;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404   /404.html;
@@ -383,7 +373,7 @@ http {
         listen       80;
         server_name  tv.hacktea8.com;
         index index.html index.htm index.php;
-        root html/btvideo;
+        root /var/www/html/btvideo;
         #charset koi8-r;
 
         location / {
@@ -395,8 +385,8 @@ http {
         listen       80;
         server_name  btv.emubt.com;
         index index.html index.htm index.php;
-        root html/btvideo;
-        #charset koi8-r;
+        root /var/www/html/btvideo;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -430,7 +420,7 @@ http {
         listen       80;
         server_name  btv.hacktea8.com;
         index index.html index.htm index.php;
-        root html/btvideo;
+        root /var/www/html/btvideo;
         #charset koi8-r;
 
         location / {
@@ -442,8 +432,8 @@ http {
         listen       80;
         server_name  www.emubt.com *.emubt.com;
         index index.html index.htm index.php;
-        root html/emules;
-        #charset koi8-r;
+        root /var/www/html/emules;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404         /404.html;
@@ -477,7 +467,7 @@ http {
         listen       80;
         server_name  emu.hacktea8.com;
         index index.html index.htm index.php;
-        root html/emules;
+        root /var/www/html/emules;
         location / {
           rewrite  ^(.*)    http://www.emubt.com$1 permanent;
         }
@@ -485,9 +475,9 @@ http {
     server {
         listen       80;
         server_name  emutest.hacktea8.com;
-        root html/emuletest;
+        root /var/www/html/emuletest;
         index index.html index.htm index.php;
-        #charset koi8-r;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -521,8 +511,8 @@ http {
         listen       80;
         server_name  img.hacktea8.com;
         index index.html index.htm index.php;
-        root html/images/;
-        #charset koi8-r;
+        root /var/www/html/images/;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -564,8 +554,8 @@ http {
         listen       80;
         server_name  v.hacktea8.com;
         index index.html index.htm index.php;
-        root html/video;
-        #charset koi8-r;
+        root /var/www/html/video;
+        charset utf-8;
 
         #access_log  logs/host.access.log  main;
         error_page  404              /404.html;
@@ -587,6 +577,20 @@ http {
         #}
     }
 
+    upstream phpbackend {
+    #   server   127.0.0.1:9000 weight=100 max_fails=10 fail_timeout=30;
+    #   server   127.0.0.1:9001 weight=100 max_fails=10 fail_timeout=30;
+    #   server   127.0.0.1:9002 weight=100 max_fails=10 fail_timeout=30;
+    #   server   127.0.0.1:9003 weight=100 max_fails=10 fail_timeout=30;
+        server   unix:/dev/shm/php-cgi.sock weight=100 max_fails=10 fail_timeout=30;
+	server   unix:/dev/shm/php-cgi1.sock weight=100 max_fails=10 fail_timeout=30;
+	server   unix:/dev/shm/php-cgi2.sock weight=100 max_fails=10 fail_timeout=30;
+    #   server   unix:/dev/shm/php-cgi3.sock weight=100 max_fails=10 fail_timeout=30;
+    #   server   unix:/var/www/php-fpm4.sock weight=100 max_fails=10 fail_timeout=30;
+    #   server   unix:/var/www/php-fpm5.sock weight=100 max_fails=10 fail_timeout=30;
+    #   server   unix:/var/www/php-fpm6.sock weight=100 max_fails=10 fail_timeout=30;
+    #   server   unix:/var/www/php-fpm7.sock weight=100 max_fails=10 fail_timeout=30;
+    }
 
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
