--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,11 @@ worker_processes  3;
 
 worker_cpu_affinity 001 010 100;
 
-error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+#error_log  log/nginx/error.log;
+#error_log  log/nginx/error.log  notice;
+#error_log  log/nginx/error.log  info;
 
-pid        logs/nginx.pid;
+pid        log/nginx/nginx.pid;
 
 worker_rlimit_nofile 65535;
 events {
@@ -62,6 +62,10 @@ http {
 
     fastcgi_intercept_errors on;
 
+    upstream backend{
+     server unix:/dev/shm/php-cgi.sock weight=100 max_fails=10 fail_timeout=30;
+     server unix:/dev/shm/php-cgi2.sock weight=100 max_fails=10 fail_timeout=30;
+    }
     server {
         listen       80;
         server_name  bbs.59iav.ru;
@@ -135,7 +139,7 @@ http {
 
     server {
         listen       80;
-        server_name  pmadm.hacktea8.com;
+        server_name  pmadm.hacktea8.com pmadm.emubt.com;
         index index.html index.htm index.php;
         root /var/www/html/phpmyadmin;
         charset utf-8;
@@ -165,141 +169,33 @@ http {
     server {
         listen       80;
         server_name  mh.emubt.com;
-        index index.html index.htm index.php;
         root /var/www/html/comics;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|crossdomain\.xml|favicon\.ico|index\.html|robots\.txt|public)(.*)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
 
     server {
         listen       80;
         server_name  51pay.hacktea8.com;
-        index index.html index.htm index.php;
         root /var/www/html/51pay;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|crossdomain\.xml|favicon\.ico|index\.htm*|robots\.txt|public)(.*)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
     
     server {
         listen       80;
         server_name  tool.hacktea8.com;
-        index index.html index.htm index.php;
         root /var/www/html/webtools;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.php last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|robots\.txt|public)(.*)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
     
     server {
         listen       80;
         server_name  vv.hacktea8.com;
-        index index.html index.htm index.php;
         root /var/www/html/videostv;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /index.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /index.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|[a-zA-Z0-9-_\.]+\.txt|public)(.+)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
     
     server {
@@ -338,35 +234,9 @@ http {
     server {
         listen       80;
         server_name  jok.emubt.com;
-        index index.html index.htm index.php;
         root /var/www/html/joker;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404   /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|[a-zA-Z0-9-_\.]+\.txt|public)(.+)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        location ~ /\.ht {
-            deny  all;
-        }
+        include codei.conf;
     }
     
     server {
@@ -384,36 +254,9 @@ http {
     server {
         listen       80;
         server_name  btv.emubt.com;
-        index index.html index.htm index.php;
         root /var/www/html/btvideo;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|[a-zA-Z0-9-_\.]+\.txt|public)(.+)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        location ~ /\.ht {
-            deny  all;
-        }
+        include codei.conf;
     }
 
     server {
@@ -431,36 +274,9 @@ http {
     server {
         listen       80;
         server_name  www.emubt.com *.emubt.com;
-        index index.html index.htm index.php;
         root /var/www/html/emules;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404         /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        include expire_static.conf;
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|[a-zA-Z0-9-_\.]+\.txt|public)(.+)$ /index.php/$1 last;
-        }
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
    
     server {
@@ -476,78 +292,16 @@ http {
         listen       80;
         server_name  emutest.hacktea8.com;
         root /var/www/html/emuletest;
-        index index.html index.htm index.php;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        location / {
-            rewrite ^/$ /index.html last;
-            rewrite ^/(?!index\.php|[a-zA-Z0-9-_\.]+\.xml|favicon\.ico|[a-zA-Z0-9-_\.]+\.html|[a-zA-Z0-9-_\.]+\.txt|public|api)(.*)$ /index.php/$1 last;
-        }
-        
-        location ~ ^(.+\.php)(.*)$ {
-
-            fastcgi_index index.php;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            #fastcgi_pass   127.0.0.1:9000;
-            fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-            include        fastcgi_params;
-        }
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
 
     server {
         listen       80;
         server_name  img.hacktea8.com;
-        index index.html index.htm index.php;
         root /var/www/html/images/;
-        charset utf-8;
 
-        #access_log  logs/host.access.log  main;
-        error_page  404              /404.html;
-        # redirect server error pages to the static page /50x.html
-        error_page   500 502 503 504  /50x.html;
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-
-        location / {
-            rewrite ^/$ /index.php last;
-            rewrite ^/(?!index\.php|crossdomain\.xml|robots\.txt|public)(.*)$ /index.php/$1 last;
-        }
-
-        if ( $fastcgi_script_name ~ \.*\.(png|jpg|gif|bmp|PNG|JPG|GIF|BMP)\/.*php ) {
-            return 404;
-        }
-
-
-          location ~ ^(.+\.php)(.*)$ {
-
-                fastcgi_index index.php;
-                fastcgi_split_path_info ^(.+\.php)(.*)$;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                fastcgi_param PATH_INFO $fastcgi_path_info;
-                fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-                #注意：去临时文件夹内找到你的php-cgi，也可能php-cgi.sock不是这么个名字。
-                #fastcgi_pass 127.0.0.1:9000;
-                fastcgi_pass   unix:/dev/shm/php-cgi.sock;
-                include  fastcgi_params;
-          }
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
+        include codei.conf;
     }
 
     server {
